force-app/main/default/objects/Sales_Strategy__c/Sales_Strategy__c.object-meta.xml
<CustomObject>
    <label>Sales Strategy</label>
    <nameField>
        <label>Sales  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>