force-app/main/default/objects/Sales_Strategy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Strategies</relationshipLabel>
    <relationshipName>Sales_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>