force-app/main/default/objects/Sales_Strategy__c/fields/Must_Focused__c.field-meta.xml
<CustomField>
    <fullName>Must_Focused__c</fullName>
    <label>Must Focused</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focused Sell</fullName>
            </value>
            <value>
                <fullName>Must Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>