force-app/main/default/objects/Sales_Strategy__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>KL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>