force-app/main/default/objects/Sales_Strategy__c/fields/Sales_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Product Category</label>
    <referenceTo>Sales_Product_Category__c</referenceTo>
    <relationshipLabel>Sales Strategies</relationshipLabel>
    <relationshipName>Sales_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>