force-app/main/default/objects/Sales_Strategy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Category</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>