force-app/main/default/objects/Sales_Strategy__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>