force-app/main/default/objects/Sales_Strategy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Product__c</columns>
    <columns>Account__c</columns>
    <columns>Region__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Channel__c</field>
        <operation>equals</operation>
        <value>KA</value>
    </filters>
    <label>All</label>
</ListView>