force-app/main/default/objects/Sales_Strategy__c/listViews/Today_Created.listView-meta.xml
<ListView>
    <fullName>Today_Created</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>Account__c</columns>
    <columns>Region__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Created</label>
</ListView>